--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <title>MakerMingle</title>
   </head>
   <body>
-    <script src="https://morethanwallet.com/appstore/index.js"></script>
+    <!-- <script src="https://morethanwallet.com/appstore/index.js"></script> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
